/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
	id 'java'
	id 'jacoco'
	id 'maven-publish'
}

group = 'com.github.kbase'

var VER_AUTH2_CLIENT = "0.5.0"

repositories {
	mavenCentral()
	maven {
		name = "JitPack" 
		url = 'https://jitpack.io'
	}
}

compileJava {
	// TODO BUILD remove when we no longer support java 8, might need options.release = 11
	java.sourceCompatibility = JavaVersion.VERSION_1_8
	java.targetCompatibility = JavaVersion.VERSION_1_8
}

java {
	withSourcesJar()
	withJavadocJar()
}

test {
	systemProperty "test.cfg", "./test.cfg"
	testLogging {
		exceptionFormat = 'full'
		showStandardStreams = true
	}
	finalizedBy jacocoTestReport
}

jacocoTestReport {
	reports {
		xml.required = true
		csv.required = true
	}
}

javadoc {
	options {
		// I don't know why this isn't working, but it's not worth spending time on right now
		links "https://docs.oracle.com/javase/8/docs/api/"
		links "https://javadoc.jitpack.io/com/github/kbase/auth2_client_java/$VER_AUTH2_CLIENT/javadoc/"
	}
}

publishing {
	publications {
		maven(MavenPublication) {
			from components.java
		}
	}
}

dependencies {

	// using older dependencies to not force upgrades on services that might not be able to
	// handle them. Need to upgrade the services and then upgrade here
	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.5.4'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.5.4'
	implementation 'org.apache.commons:commons-lang3:3.1'
	implementation 'org.apache.httpcomponents:httpclient:4.5.9'
	implementation 'org.apache.httpcomponents:httpmime:4.5.8'
	implementation "com.github.kbase:auth2_client_java:$VER_AUTH2_CLIENT"

	testImplementation 'com.github.kbase:auth2:0.7.1'
	testImplementation 'com.github.kbase:java_test_utilities:0.1.0'
	testImplementation 'commons-io:commons-io:2.4'
	testImplementation 'org.ini4j:ini4j:0.5.2'
	testImplementation 'junit:junit:4.9'
	testImplementation 'net.sf.jsignature.io-tools:easystream:1.2.14'
	testImplementation 'com.github.zafarkhaja:java-semver:0.9.0'
	testImplementation 'commons-codec:commons-codec:1.8'
	
}
